Added icon for current weather

--- a/src/style.css
+++ b/src/style.css
@@ -99,7 +99,7 @@ button.locate:hover {
   margin: 15px 0 15px 0;
 }
 
-img.today {
+#icon-today {
   max-width: 200px;
   height: auto;
   display: block;
