Small adjustments on width & height of icon

--- a/src/style.css
+++ b/src/style.css
@@ -100,8 +100,9 @@ button.locate:hover {
 }
 
 #icon-today {
+  max-height: 180px;
+  width: auto;
   max-width: 200px;
-  height: auto;
   display: block;
   margin: 0 auto;
 }
